fixed shifted website

--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,7 @@
 
 body {
   position: absolute; height: 100%; width: 100%;
+  margin: 0 auto;
   text-align: center;
   font-size: 20px;
   background-color: rgb(19, 30, 55);
